tests/baselines/reference/checkSuperCallBeforeThisAccessing6.errors.txt
tests/cases/compiler/checkSuperCallBeforeThisAccessing6.ts(8,9): error TS2684: The 'this' context of type 'void' is not assignable to method's 'this' of type 'Base'.


==== tests/cases/compiler/checkSuperCallBeforeThisAccessing6.ts (1 errors) ====
    class Base {
        constructor(...arg) {
        }
    }
    class Super extends Base {
        constructor() {
            (() => this);  // No Error
            super();
            ~~~~~~~
!!! error TS2684: The 'this' context of type 'void' is not assignable to method's 'this' of type 'Base'.
        }
    }